[gd_scene load_steps=6 format=1]

[ext_resource path="res://Entities/Enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5.22989, 8.85841 )

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.285714, 0.766234, 1 )
colors = ColorArray( 1, 0, 0, 1, 0.921875, 1, 0, 1, 0.43792, 0.18219, 0.777344, 1, 0.210938, 0.24176, 1, 1 )

[sub_resource type="GDScript" id=3]

script/source = "extends Particles2D

var was_activated = false

func start():
	set_emitting(true)
	was_activated = true
	set_process(true)

func _ready():
	pass

func _process(delta):
	if was_activated and not is_emitting():
		get_parent().queue_free()"

[node name="EnemyRigidBody2D" type="RigidBody2D"]

input/pickable = true
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="EnemyArea2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 6.31844, 0, 0, 3.58395, -0.189998, -0.2377 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 4
collision/mask = 3

[node name="EnemySprite" type="Sprite" parent="EnemyArea2D"]

texture = ExtResource( 2 )

[node name="EnemyCollisionShape2D" type="CollisionShape2D" parent="EnemyArea2D"]

transform/pos = Vector2( -0.189998, -0.2377 )
transform/scale = Vector2( 6.31844, 3.58395 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="EnemyDeathParticles2D" type="Particles2D" parent="."]

config/amount = 64
config/lifetime = 1.46025
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.15
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 90.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.1
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 6.0
params/tangential_accel = 0.0
params/damping = 26.257
params/initial_angle = 0.0
params/initial_size = 7.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 0.41
randomness/linear_velocity = -0.26
randomness/radial_accel = 0.71
randomness/damping = 0.61
randomness/initial_size = 1.0
color/color = Color( 0, 0, 0, 1 )
color/color_ramp = SubResource( 2 )
script/script = SubResource( 3 )

[node name="EnemyParticles2D" type="Particles2D" parent="."]

visibility/visible = false
config/amount = 32
config/lifetime = 2.0
config/process_mode = 1
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 180.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[connection signal="area_enter" from="EnemyArea2D" to="." method="_on_Area2D_area_enter"]


